--- a/_posts/2020-08-01-About Me.md
+++ b/_posts/2020-08-01-About Me.md
@@ -6,19 +6,14 @@ categories: ''
 tags: ''
 ---
 ## Biography
-Haojie is a senior student major in automation at Harbin Institute of Techology. He obtained the first place in his major among 156 students. He worked as a research assistant in HIT and U.C.Berkeley, and he would go to Harvard University as a visiting student intern next semester. He has joined 6 projects, working on computer vision, image processing, control and embedded system. My CV is [here](https://github.com/HaojieSHI98/HaojieSHI98.github.io/blob/master/assets/CV%20Haojie.pdf).
+Zhaochong is a senior student major in Computer Science at Harbin Institute of Techology. He obtained the 13th in his major among 266 students. He worked as a research assistant in Mass Data Research Center at HIT, under the supervision of Hongzhi Wang. He has joined 6 projects, working on artificial intelligence such as  knowledge graph & reasoning and question answering system, and algorithm for massive data computing. He seeks to use these advancements to help in making progress on core AI problems. He enjoys collaborating with a diverse set of researchers to tackle these issues! My CV is [here](https://github.com/1170801121/1170801121.github.io//assets/CV%20Haojie.pdf).
 
 ## Education
 
-* Harbin Institute of Technolgy(Jul.2016-Jun.2020 expected)
+* Harbin Institute of Technolgy(Jul.2017-Jun.2021 expected)
 
-    GPA: __95.99__/100(major)  Rank: 1/156
+    GPA: __92.62__/100(major)  Rank: 13/266
 
-* University of California, Berkeley(Jan.2019-Jul.2019)
-
-    GPA:__4.0__/4.0
-
-* Harvard University(Sep.2019-May.2020 expected)
 
 ## Research Projects
 
