--- a/_posts/2020-08-01-About Me.md
+++ b/_posts/2020-08-01-About Me.md
@@ -6,7 +6,7 @@ categories: ''
 tags: ''
 ---
 ## Biography
-Zhaochong is a senior student major in Computer Science at Harbin Institute of Techology. He obtained the 13th in his major among 266 students. He worked as a research assistant in Mass Data Research Center at HIT, under the supervision of Hongzhi Wang. He has joined 6 projects, working on artificial intelligence such as  knowledge graph & reasoning and question answering system, and algorithm for massive data computing. He seeks to use these advancements to help in making progress on core AI problems. He enjoys collaborating with a diverse set of researchers to tackle these issues! My CV is [here](https://github.com/1170801121/1170801121.github.io//assets/CV%20Haojie.pdf).
+Zhaochong is a senior student major in Computer Science at Harbin Institute of Techology. He obtained the 13th in his major among 266 students. He worked as a research assistant in Mass Data Research Center at HIT, under the supervision of Hongzhi Wang. He has joined 6 projects, working on artificial intelligence such as  knowledge graph & reasoning and question answering system, and algorithm for massive data computing. He seeks to use these advancements to help in making progress on core AI problems. He enjoys collaborating with a diverse set of researchers to tackle these issues! My CV is [here](https://github.com/1170801121/1170801121.github.io/tree/master/assets/CV%20Zhaochong.pdf).
 
 ## Education
 
@@ -17,12 +17,12 @@ Zhaochong is a senior student major in Computer Science at Harbin Institute of T
 
 ## Research Projects
 
-* Lossy Image Compression with Recurrent Network(DAS Lab, Harvard University)
-* 2D Object Detection from a Bird’s Eye View for Autonomous Driving(MSC Lab, U.C.Berkeley)
-* Multi-modal sensor fusion for 3D object detection using neural networks(VIP Lab, U.C.Berkeley)
-* Vibration Control under Visual Servo in Three Axis Mechanical Anti Vibration Platform(RIICS, HIT)
-* Intelligent Robot System for Quoridor(Smart Car, HIT)
-* Mechanical Arm Handling System(HIT Competitive Robot Team, HIT)
+* EM-RBR: a Reinforced Framework for Knowledge Graph Completion from Reasoning Perspective (Mass Data Research Center, HIT)
+* Profit Optimization for Taxi Driver and Passengers Using Large Dataset
+* One-stop Artificial Intelligence Class Assistant App
+* Construction Scheme of medical question answering system
+* Effective unified index structure for multi-query on massive graph data (under distributed system environment) 
+* Intelligent Multi-functional Badminton Robot
 
 ## Research Interest
 
