--- a/_posts/2020-08-01-About Me.md
+++ b/_posts/2020-08-01-About Me.md
@@ -1,7 +1,7 @@
 ---
 title: About Me
 layout: post
-img: myself.jpg
+img: i-rest.jpg
 categories: ''
 tags: ''
 ---
@@ -24,11 +24,23 @@ Zhaochong is a senior student major in Computer Science at Harbin Institute of T
 * Effective unified index structure for multi-query on massive graph data (under distributed system environment) 
 * Intelligent Multi-functional Badminton Robot
 
-## Research Interest
+## Extra-curriculum activities
 
-* Computer vision & Image processing
-* SLAM & Robtics
-* Control theory & Artificial Intelligence
+<center>
+<img src="{{site.baseurl}}/assets/img/friends.jpg" width="55%" height="55%" /><br>
+<div style="color:orange; border-bottom: 1px solid #d9d9d9;
+    display: inline-block;
+    color: #999;
+    padding: 2px;">Supported educational undertakings.</div><br>
+</center>
+
+<center>
+<img src="{{site.baseurl}}/assets/img/volun.jpg" width="55%" height="55%" /><br>
+<div style="color:orange; border-bottom: 1px solid #d9d9d9;
+    display: inline-block;
+    color: #999;
+    padding: 2px;">Volunteer servicing Time Confirmation.</div><br>
+</center>
 
 ## Contact
-Email: haojieshi_stone@outlook.com/haojieshi98@gmail.com
+Email: anzhaochong@outlook.com  1170801121@stu.hit.edu.cn
