--- a/_posts/2020-08-01-About Me.md
+++ b/_posts/2020-08-01-About Me.md
@@ -19,7 +19,7 @@ Zhaochong is a senior student major in Computer Science at Harbin Institute of T
 
 * **EM-RBR: a Reinforced Framework for Knowledge Graph Completion from Reasoning Perspective**
 * **One-Stop Intelligent Class Assistant App** 
-* **Effective Unified Index Structure for Multi-Query on Massive Graph Data (In a Distributed System Environment)** 
+* **Unified Index for Effective Multi-Query on Massive Graph Data (In a Distributed System Environment)** 
 * **Profit Optimization for Taxi Drivers at Airports Using a Large Dataset**
 * **Medical Question Answering System Construction** 
 * **Intelligent Multi-functional Badminton Robot**
